# autonomous-robot-navigation

./: README.md
media/: frames_2026-02-02_17.59.25.gv
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: amcl_config.yaml  gz_bridge.yaml
robot_description/launch/: display.launch.py  gazebo.launch.py  localization.launch.py  mpc_controller.launch.py  pid_controller.launch.py  pid_path_follower.launch.py  rl_control.launch.py
robot_description/maps/: depot.yaml
robot_description/rviz/: config.rviz
robot_description/scripts/: astar.cpp  astar_planner.cpp  evaluate_rl_agent.py  frame_id_converter.cpp  models.py  mpc_controller.cpp  pid_controller.cpp  pid_path_follower.cpp  rl_agent.py  robot_env.py  train_node.py  train_rl_agent.py
robot_description/src/description/: robot.urdf
robot_description/srv/: PlanPath.srv
